[package]
authors = ["Jake O'Shannessy <joshannessy@smokecloud.com>"]
edition = "2021"
name = "fdspp"
version = "0.3.2"
license = "GPL-2.0-or-later"

[dependencies]
clap = { version = "4", features = ["cargo"] }
namelist = { git = "https://github.com/Smoke-Cloud/namelist-rs.git", rev = "749b06ba9ba26a52c6d671ec8f783293f990d939" }
tempfile = "3.7.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
