[package]
authors = ["Jake O'Shannessy <joshannessy@smokecloud.com>"]
edition = "2021"
name = "fdspp"
version = "0.3.2"
license = "GPL-2.0-or-later"

[dependencies]
clap = { version = "4", features = ["cargo"] }
namelist = "0.3"
tempfile = "3.7.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
